--- a/1-kubevirt/cloud-init_debian.yaml
+++ b/1-kubevirt/cloud-init_debian.yaml
@@ -50,7 +50,7 @@ spec:
     targetPort: 22
   selector:
     image: debian9
-  type: NodePort
+  type: LoadBalancer
 ---
 apiVersion: v1
 kind: Service
